tests/error/comptime_expr_errors/negative_nat.py
from guppylang.std.builtins import nat
from tests.util import compile_guppy


@compile_guppy
def foo() -> nat:
    return comptime(-1)
